# mdspan_formatter

./: CMakeLists.txt  README.md
.github/workflows/: clang.yml
include/: mdspan_fmt_formatter.hpp  mdspan_formatter.hpp
test/: CMakeLists.txt  fmt_format_test.cpp  fmt_layout_left_test.cpp  fmt_layout_left_test.hpp  fmt_layout_right_test.cpp  fmt_layout_right_test.hpp  main.cpp  std_format_test.cpp  std_layout_left_test.cpp  std_layout_left_test.hpp  std_layout_right_test.cpp  std_layout_right_test.hpp  tests.hpp
